# tldscroll

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  example.env  example.secrets.toml  example.settings.toml  manifest.yml  pyproject.toml  settings.toml
tlds/: __init__.py  __main__.py
tlds/utils/: __init__.py  config.py  summarizer.py
tldscroll/: __main__.py
tldscroll/llm/: __init__.py  llm.py
tldscroll/utils/: __init__.py  summarizer.py
