[tool.poetry]
name = "tldscroll"
version = "0.1.0"
description = ""
authors = ["Angad Behl <angad@angad.me>"]
readme = "README.md"
packages = [{ include = "tldscroll" }]
scripts = { tldscroll = "tldscroll.__main__:main" }

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
slack-bolt = "^1.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"